# ClaudeMCP

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  README.md  README_old.md  autonomous-action.sh  autonomous-mcp.json.example
LOG/: 2026-02-06.md  2026-02-12.md  2026-02-13.md  2026-02-14.md
docs/requirements/: first_run_checklist.md  first_run_procedure.md  local_storage_policy.md  overview.md
docs/team_ops/: LOG_TEMPLATE.md  claude_code_role.md  codex_role.md  team_architecture.md  triad_collaboration.md
elevenlabs-t2s-mcp/: .env.example  README.md  pyproject.toml
elevenlabs-t2s-mcp/src/elevenlabs_t2s_mcp/: __init__.py  config.py  server.py
installer/: README.md  embodied-claude-installer.spec  pyproject.toml
installer/src/installer/: main.py
installer/src/installer/pages/: api_key.py  camera.py  complete.py  dependencies.py  install.py  welcome.py
memory-mcp/: .env.example  README.md  pyproject.toml
memory-mcp/src/memory_mcp/: __init__.py  config.py  episode.py  memory.py  sensory.py  sensory_buffer.py  server.py  short_term_memory.py  types.py  working_memory.py
memory-mcp/tests/: __init__.py  conftest.py  test_causal_links.py  test_episode.py  test_memory.py  test_memory_model_v2.py  test_memory_model_v2_e2e.py  test_memory_model_v2_integration.py  test_sensory.py  test_sensory_buffer.py  test_server_sensory.py  test_short_term_memory.py  test_types.py  test_working_memory.py
system-temperature-mcp/: pyproject.toml
system-temperature-mcp/src/system_temperature_mcp/: __init__.py  server.py
usb-webcam-mcp/: pyproject.toml
usb-webcam-mcp/src/usb_webcam_mcp/: __init__.py  server.py
wifi-cam-mcp/: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml
wifi-cam-mcp/src/wifi_cam_mcp/: __init__.py  camera.py  config.py  server.py
