[project]
name = "elevenlabs-t2s-mcp"
version = "0.1.0"
description = "MCP server for ElevenLabs text-to-speech"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "elevenlabs>=1.0.0",
]

[project.scripts]
elevenlabs-t2s = "elevenlabs_t2s_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elevenlabs_t2s_mcp"]
