[project]
name = "embodied-claude-installer"
version = "0.1.0"
description = "Installer for Embodied Claude - AI with physical senses"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "pyinstaller>=6.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.scripts]
embodied-claude-installer = "installer.main:main"

[tool.uv]
package = true
