[project]
name = "system-temperature-mcp"
version = "0.1.0"
description = "MCP server for monitoring system temperature - your sense of body temperature"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
system-temperature-mcp = "system_temperature_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
