[project]
name = "usb-webcam-mcp"
version = "0.1.0"
description = "MCP server for USB webcam capture"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

[project.scripts]
usb-webcam-mcp = "usb_webcam_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usb_webcam_mcp"]
